# rebase

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DATA-FLOW-AND-METRICS-ANALYSIS-2026-05-02.md  FRONTEND-BACKEND-GAP-ANALYSIS-2026-05-02.md  HANDOFF-FROM-PREV-SESSION-2026-04-30.md  HANDOFF-WILLIAM-2026-05-03.md  INTELLIGENCE-ARCHITECTURE-v3.md  INTELLIGENCE-ARCHITECTURE.md  INTELLIGENCE-PLAN.md  JOANNA-INTELLIGENCE-TRACKER.md  JOANNA-SCRAPER-SETUP-PLAN.md  METRIC-LOGIC-INVESTIGATION-2026-05-02.md  Makefile  README.md  ROADMAP.md  SPEC-COMPARISON-SETS-V2.md  SPEC-COMPOSITE-INDICES-V1.md  SPEC.md  STATUS-2026-04-23-WILLIAM.md  TEST-PLAN-2026-04-23-AUDIT.md  TODO.md  WILL-TO-JOANNA-2026-04-30.md  WILLIAM-HANDOFF-2026-04-23.md  WILLIAM-TO-JOANNA-2026-04-23.md  WORKSPACE-AUDIT-2026-04-29.sql  ai-workforce-calculator.jsx  diagnostic-product-plan.md  pyproject.toml  run_scraper.bat  test-calculator.html  vercel.json  xhs-warroom.jsx
.claude/: launch.json  settings.local.json  settings.local.json.bak
api/: admin.js  ai.js  ci.js  onboarding.js  package.json  save-survey.js  submit-lead.js  workflow-analyze.js  workflow-decompose.js  workflow-lead.js  workflow-scout.js
backend/: brand_registry.js  db.js  migrate.js  package.json  scheduler.js  server.js
docs/: BETA-FIXES.md  CODEBASE-AUDIT.md  architecture.md  backend-infrastructure.md  frd.md
frontend/: index.html  package.json  tsconfig.json  vercel.json
gateway/: db.py  main.py  middleware.py  requirements.txt
infra/: docker-compose.yml
scripts/: backup_db.sh  health_check.sh
(+298 files in other folders)
